<resources>
    <string name="app_name">Fingerpainter</string>
    <string name="select_colour">Select Colour</string>
    <string name="select_brush">Brush Settings</string>
    <string name="size">Size</string>
    <string name="shape">Shape</string>
    <string name="round">Round</string>
    <string name="square">Square</string>
    <string name="change">Change</string>
    <string name="color">Color</string>
    <string name="brush">Brush</string>
</resources>